Separator comments removed